# arch-mcp

./: .dockerignore  .gitignore  DOCKERFILE  Dockerfile.smithery  LICENSE  README.md  arch_ops_server.py  docker-compose.yml  pyproject.toml  smithery.yaml  test_http_server.py
.github/workflows/: publish-ghcr.yml  publish-pypi.yml
src/arch_ops_server/: __init__.py  aur.py  config.py  groups.py  http_server.py  logs.py  mirrors.py  news.py  pacman.py  server.py  system.py  system_health_check.py  tool_metadata.py  utils.py
tests/: conftest.py  test_aur.py  test_config.py  test_diagnostics.py  test_groups.py  test_logs.py  test_mirrors.py  test_news.py  test_news_fetch.py  test_pacman.py  test_security.py  test_storage.py  test_system.py  test_utils.py  test_wiki.py
