[project]
name = "arch-ops-server"
version = "0.1.0"
description = "MCP server bridging AI assistants with Arch Linux ecosystem (Wiki, AUR, official repos)"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
    { name = "Nihal", email = "2tv8xupqg@mozmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "markdownify>=0.12.0",
]

[project.scripts]
arch-ops-server = "arch_ops_server:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
